[package]
name = "arhiva-reviste-ruginite"
version = "0.1.0"
authors = ["cristan <13849765+cristan2@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled"]